--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<! go to poor.gg to view the page | from neil >
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
