--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Typing Text Animation | HTML & CSS</title>
+  <title>small circle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,10 +12,10 @@
   <div class="wrapper">
     <div class="static-txt"></div>
     <ul class="dynamic-txts">
-      <li><span>hi code</span></li>
-      <li><span>> i got everything sorted with the domain, contacted github support and now the domain's linked :)</span></li>
-      <li><span>> im typing here because i can't talk on discord atm</span></li>
-      <li><span>> ill be on in an hour or 2</span></li>
+      <li><span>Welcome</span></li>
+      <li><span>> If you're wondering what our collective is</span></li>
+      <li><span>> You'll soon learn about it</span></li>
+      <li><span>> Enjoy your time here</span></li>
     </ul>
   </div>
 </body>
