--- a/x.html
+++ b/x.html
@@ -18,12 +18,10 @@
     <header>
         <h1>new.css</h1>
         <nav>
-            <a href="https://newcss.net">Home</a> /
-            <a href="https://newcss.net/usage/">Usage</a> /
-            <a href="https://newcss.net/usage/elements/">Elements</a> /
-            <a href="https://newcss.net/themes/">Themes</a> /
-            <a href="https://github.com/xz/new.css">GitHub</a> / 
-            <a href="https://discord.gg/hhuuC4w">Discord</a>
+            <a href="https://poor.gg">Home</a> /
+            <a href="https://e.rip">Site</a> /
+            <a href="https://discord.gg/url">Discord</a> /
+            <a href="https://steamcommunity.com/id/doubt">Steam</a> /
         </nav>
     </header>
 
