--- a/code.html
+++ b/code.html
@@ -6,8 +6,8 @@
     <title>x@poor.gg</title>
     <meta name="description" content="A classless CSS framework to write modern websites using only HTML.">
     <meta name="keywords" content="newcss,new.css,css,xz,css framework,classless css,xz.style">
-    <meta property="og:title" content="new.css">
-    <meta property="og:url" content="https://newcss.net">
+    <meta property="og:title" content="code#0001">
+    <meta property="og:url" content="https:/poor.gg">
     <meta property="og:description" content="A classless CSS framework to write modern websites using only HTML.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://newcss.net/_assets/og.png">
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <h1>Write modern websites using only HTML.</h1>
+    <h1>small circle</h1>
 
     <br>
 
