--- a/poor.html
+++ b/poor.html
@@ -22,8 +22,8 @@
 		"name": "poor"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="poor">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="small circle">
+    <meta property="og:description" content="explore our members now">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-overlap u-overlap-contrast u-xl-mode">
