--- a/poor.html
+++ b/poor.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="poggers">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>poor</title>
+    <title>small circle</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="poor.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -23,7 +23,7 @@
 }</script>
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="poor">
-    <meta property="og:description" content="">
+    <meta property="og:description" content="poor.gg">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-overlap u-overlap-contrast u-xl-mode">
