--- a/poor.html
+++ b/poor.html
@@ -21,7 +21,7 @@
 		"@type": "Organization",
 		"name": "poor"
 }</script>
-    <meta name="theme-color" content="#478ac9">
+    <meta name="theme-color" content="#0f0f0f">
     <meta property="og:title" content="poor">
     <meta property="og:description" content="poor.gg">
     <meta property="og:type" content="website">
