--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="poggers">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>small circle</title>
+    <title>poor</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="poor.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -22,8 +22,8 @@
 		"name": "poor"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="small circle">
-    <meta property="og:description" content="poor.gg">
+    <meta property="og:title" content="poor">
+    <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="poor.html" data-home-page-title="poor" class="u-body u-overlap u-overlap-contrast u-xl-mode">
