--- a/users.html
+++ b/users.html
@@ -31,34 +31,37 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-expanded-width u-image u-image-default u-image-1" src="images/f56bf818841e95838df6e360e4dded891.png" alt="" data-image-width="975" data-image-height="388" data-href="shy.html" data-page-id="222931670">
         <h1 class="u-custom-font u-text u-text-default u-text-1" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">users</h1>
-        <p class="u-custom-font u-text u-text-default u-text-2" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <h1 class="u-custom-font u-text u-text-default u-text-2" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">owner</h1>
+        <p class="u-custom-font u-text u-text-default u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-btn u-button-link u-button-style u-hover-feature u-none u-btn-1" href="code.html" data-page-id="794008882">code</a>
         </p>
-        <p class="u-custom-font u-text u-text-default u-text-3" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-text u-text-4" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-btn u-button-link u-button-style u-hover-feature u-hover-none u-none u-btn-2" href="sob.html" data-page-id="642718118">sob</a>
         </p>
-        <p class="u-custom-font u-text u-text-default u-text-4" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-text u-text-default u-text-5" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-feature u-hover-none u-none u-text-body-alt-color u-btn-3" href="ra.html" data-page-id="220706496">ra</a>
         </p>
-        <p class="u-custom-font u-text u-text-default u-text-5" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-text u-text-default u-text-6" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-btn u-button-link u-button-style u-hover-feature u-hover-none u-none u-btn-4" href="eye.html" data-page-id="131936490">eye</a>
         </p>
-        <p class="u-custom-font u-text u-text-default u-text-6" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-text u-text-default u-text-7" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-btn u-button-link u-button-style u-hover-feature u-hover-none u-none u-btn-5" href="flare.html" data-page-id="219428704">flare</a>
         </p>
-        <p class="u-custom-font u-hover-feature u-text u-text-default u-text-7" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-hover-feature u-text u-text-default u-text-8" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-6" href="hako.html" data-page-id="151439337">hako</a>
         </p>
-        <p class="u-custom-font u-text u-text-default u-text-8" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-text u-text-default u-text-9" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-btn u-button-link u-button-style u-hover-feature u-hover-none u-none u-btn-7" href="sonder.html" data-page-id="2887709344">sonder</a>
         </p>
-        <p class="u-custom-font u-hover-feature u-text u-text-default u-text-9" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-hover-feature u-text u-text-default u-text-10" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-body-alt-color u-btn-8" href="jord.html" data-page-id="49755548">jord</a>
         </p>
-        <p class="u-custom-font u-text u-text-default u-text-10" data-animation-name="customAnimationIn" data-animation-duration="2000">
+        <p class="u-custom-font u-text u-text-default u-text-11" data-animation-name="customAnimationIn" data-animation-duration="2000">
           <a class="u-active-none u-btn u-button-link u-button-style u-hover-feature u-hover-none u-none u-btn-9" href="benj.html" data-page-id="2875951">benj</a>
         </p>
-        <a class="u-active-none u-btn u-button-link u-button-style u-custom-font u-hover-feature u-hover-none u-none u-btn-10" href="benj.html" data-page-id="2875951">shy</a>
+        <a class="u-active-none u-btn u-button-link u-button-style u-custom-font u-hover-feature u-hover-none u-none u-btn-10" href="shy.html" data-page-id="222931670" data-animation-name="customAnimationIn" data-animation-duration="1000">shy</a>
+        <h1 class="u-custom-font u-text u-text-default u-text-12" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">lord</h1>
+        <h1 class="u-custom-font u-text u-text-default u-text-13" data-animation-name="pulse" data-animation-duration="1000" data-animation-direction="">council</h1>
       </div>
       
       
