--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 		"name": "poor"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="poor">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="small circle">
+    <meta property="og:description" content="poor.gg">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://media.discordapp.net/attachments/957517086870110228/959577147289243688/unknown.png?width=381&height=381"/>
   </head>
   <body data-home-page="poor.html" data-home-page-title="poor" class="u-body u-overlap u-overlap-contrast u-xl-mode">
     <section class="u-black u-clearfix u-section-1" id="sec-3282">
@@ -47,3 +48,10 @@ background-color: #000000 !important; background-image: linear-gradient(black, #
       </div></footer>
   </body>
 </html>
+
+
+
+<audio autoplay loop>
+  <source src="ting.mp3" type="audio/mpeg">
+</audio>
+
